--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/VictorCast01/Mod18_SocialAssignment#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "nodemon": "^2.0.19"
   }
 }
